add new languages

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -14,6 +14,8 @@
     "select_language": "Select language",
     "english": "English",
     "polish": "Polish",
+    "spanish": "Spanish",
+    "french": "French",
     "apply": "Apply"
   },
   "start_page": {
