--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -14,6 +14,8 @@
     "select_language": "Wybierz język",
     "english": "Angielski",
     "polish": "Polski",
+    "spanish": "Hiszpański",
+    "french": "Francuski",
     "apply": "Zastosuj"
   },
   "start_page": {
