game icon & splash screen add, UI cleanup

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -21,7 +21,7 @@
     "apply": "Apply"
   },
   "start_page": {
-    "tagline": "Let's start the conversation"
+    "tagline": "Let’s get talking"
   },
   "game_settings": {
     "title": "Game settings",
