--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -21,7 +21,7 @@
     "apply": "Aplicar"
   },
   "start_page": {
-    "tagline": "Empecemos la conversación"
+    "tagline": "Let’s get talking"
   },
   "game_settings": {
     "title": "Configuración",
