--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -21,7 +21,7 @@
     "apply": "Appliquer"
   },
   "start_page": {
-    "tagline": "Commençons la conversation"
+    "tagline": "Let’s get talking"
   },
   "game_settings": {
     "title": "Paramètres du jeu",
