--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -21,7 +21,7 @@
     "apply": "Zastosuj"
   },
   "start_page": {
-    "tagline": "Zacznijmy rozmowę"
+    "tagline": "Let’s get talking"
   },
   "game_settings": {
     "title": "Ustawienia gry",
