--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -71,7 +71,7 @@
   "categories": {
     "chill": "Chill",
     "family": "Family",
-    "friends": "Friends",
+    "party": "Party",
     "spicy": "Spicy",
     "wild": "Wild",
     "deep": "Deep"
