--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -71,7 +71,7 @@
   "categories": {
     "chill": "Relax",
     "family": "Familia",
-    "friends": "Amigos",
+    "party": "Fiesta",
     "spicy": "Picante",
     "wild": "Locas",
     "deep": "Profundas"
