--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -71,7 +71,7 @@
   "categories": {
     "chill": "Détente",
     "family": "Famille",
-    "friends": "Amis",
+    "party": "Fête",
     "spicy": "Épicé",
     "wild": "Folie",
     "deep": "Profondes"
