--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -71,7 +71,7 @@
   "categories": {
     "chill": "Na luzie",
     "family": "Rodzinne",
-    "friends": "Znajomi",
+    "party": "Impreza",
     "spicy": "Pikantne",
     "wild": "Szalone",
     "deep": "Głębokie"
